--- a/biblo.bib
+++ b/biblo.bib
@@ -407,7 +407,7 @@ url="https://doi.org/10.1007/978-3-319-21569-3_9"
 @misc{DataAnalysisProcess,
   title = {Data {{Analysis}} - {{Process}}},
   howpublished = {https://www.tutorialspoint.com/excel\_data\_analysis/data\_analysis\_process.htm},
-  file = {C\:\\Users\\lenovo\\Zotero\\storage\\V32ED44C\\data_analysis_process.html}
+  file = {C\:\\Users\\lenovo\\Zotero\\storage\\VWZ99CHW\\data_analysis_process.html}
 }
 @article{DataAnalysis2022,
   title = {Data Analysis},
@@ -429,4 +429,45 @@ url="https://doi.org/10.1007/978-3-319-21569-3_9"
   title = {What Is {{Data Filtering}}? - {{Displayr}}},
   howpublished = {https://www.displayr.com/what-is-data-filtering/},
   file = {C\:\\Users\\lenovo\\Zotero\\storage\\VRZRZ995\\what-is-data-filtering.html}
+}
+
+@article{shetaBuildingHealthCare2012,
+  title = {Building a Health Care Data Warehouse for Cancer Diseases},
+  author = {Sheta, Osama El-Sayed and Eldeen, Ahmed Nour},
+  year = {2012},
+  month = oct,
+  journal = {International Journal of Database Management Systems},
+  volume = {4},
+  number = {5},
+  eprint = {1211.4371},
+  eprinttype = {arxiv},
+  primaryclass = {cs},
+  pages = {39--46},
+  issn = {09755985},
+  doi = {10.5121/ijdms.2012.4503},
+  abstract = {This paper presents architecture for health care data warehouse specific to cancer diseases which could be used by executive managers, doctors, physicians and other health professionals to support the healthcare process. The data today existing in multi-sources with different formats makes it necessary to have some techniques for data integration. Executive managers need access to Information so that decision makers can react in real time to changing needs. Information is one of the most factors to an organization success that executive managers or physicians would need to base their decisions on, during decision making. A health care data warehouse is therefore necessary to integrate the different data sources into a central data repository and analysis this data.},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Databases}
+}
+
+
+@article{abd2019proposed,
+  title={A proposed data warehouse framework to enhance decisions of distribution system in pharmaceutical sector},
+  author={Abd Elazeem, Noura Mahmoud and Labib, Nevine Makram and Abdella, Aliaa Kamal},
+  journal={Egyptian Computer Science Journal},
+  volume={43},
+  number={2},
+  pages={43--60},
+  year={2019}
+}
+
+@article{sebaa2018medical,
+  title={Medical big data warehouse: Architecture and system design, a case study: Improving healthcare resources distribution},
+  author={Sebaa, Abderrazak and Chikh, Fatima and Nouicer, Amina and Tari, AbdelKamel},
+  journal={Journal of medical systems},
+  volume={42},
+  number={4},
+  pages={1--16},
+  year={2018},
+  publisher={Springer}
 }
