--- a/parts/tocheck.tex
+++ b/parts/tocheck.tex
@@ -1,4 +1,18 @@
 
+\chapter{Technical background / Background review}
+This section details some concepts and tools called to be used in this study
+\section{backend side}
+different techs i used in the backend side (while manipulationg data and such)
+\section{visualization side}
+different techs i used in the visualization side (ploting and disign part)
+
+\chapter{Implementation}
+\section{Tools}
+\section{Result}
+
+\chapter{Conclusion and prespectives}
+
+\newpage
 thesis and notes to check:
 
 
