--- a/parts/dataVis.tex
+++ b/parts/dataVis.tex
@@ -58,8 +58,9 @@ As science progresses, this model has been detailed, Figure \ref{fig:infovispipe
   \begin{itemize}
   \item \textbf{\textit{Data Requirements Specification:}} The data required for analysis is based on a question or an experiment. Based on the requirements of those directing the analysis, the data necessary as inputs to the analysis is identified (e.g., Population of people). Specific variables regarding a population (e.g., Age and Income) may be specified and obtained. Data may be numerical or categorical\cite{DataAnalysisProcess}.
   \item \textbf{\textit{Data Collection:}} Guided by the requirements identified, Data can be collected through several sources, including online sources, computers, personnel, and sources from the community.
-  \item \textbf{\textit{Data processing:}} The data that is collected must be processed or organized for analysis. For instance, these may involve placing data into rows and columns in a table format (known as structured data) for further analysis, often through the use of spreadsheet or statistical software\cite{DataAnalysisProcess}.
-  \item \textbf{\textit{Data Cleaning:}} The processed and organized data may be incomplete, contain duplicates, or contain errors. Data Cleaning is the process of preventing and correcting these errors\cite{DataAnalysisProcess}.
+  \item \textbf{\textit{Data processing:}} The data that is collected must be processed or organized for analysis. For instance, these may involve placing data into rows and columns in a table format (known as structured data) for further analysis, often through the use of spreadsheet or statistical software\cite{DataAnalysis2022}.
+  \item \textbf{\textit{Data Cleaning:}} The processed and organized data may be incomplete, contain duplicates, or contain errors. Data Cleaning is the process of preventing and correcting these errors\cite{DataAnalysisProcess}. 
+  % TODO: correct this link : https://www.tutorialspoint.com/excel_data_analysis/data_analysis_process.htm#:~:text=Data%20Analysis%20is%20a%20process,%2C%20and%20supporting%20decision%2Dmaking.
   \item \textbf{\textit{Perform data analysis:}}  One of the last steps in the data analysis process is analyzing and manipulating the data. This can be done in a variety of ways depending on the cleaned data nature\cite{WhatDataAnalysis}.
   \end{itemize}
   The data analysis step produces the \underline{prepared data}.
@@ -75,21 +76,49 @@ As science progresses, this model has been detailed, Figure \ref{fig:infovispipe
 
 
 
-\section{TODO}
-transition to the pipeline i will use.
-re orgnizing l'enchainement d'idees + titles.
-\section{Literature \& related works review}
-talk about some related work.
 
-\chapter{Technical background}
-** i will talk about all the tech i used here 
-\section{backend side}
-different techs i used in the backend side (while manipulationg data and such)
-\section{visualization side}
-different techs i used in the visualization side (ploting and disign part)
+\section{InfoVis and medical data -Literature \& Related works review-}
+We present in this section architecture for healthcare data warehouses and solutions that attempt to integrate infoVis into medical data and medical structures which could be used by executive managers, doctors, physicians and other health professionals to support the healthcare process.  Medical data existing today in multiple sources with different formats makes it necessary to have certain data integration techniques. A healthcare data warehouse is therefore needed to integrate the different data sources into a central data repository and analyze this data.
+\begin{itemize}
+  \item \textbf{\textit{A Healthcare Data Warehouse for Cancer Diseases:}} Dr.Osama E.Sheta and Ahmed Nour Eldeen discussed in their paper\cite{shetaBuildingHealthCare2012} the implementation of a healthcare data warehouse for cancer diseases, they proposed  2 stages approach for the building cancer data warehouse: 
+  \begin{enumerate}
+    \item \textit{Business Analysis:} Consist of business process analysis and business requirement analysis (Figure\ref{fig:cancerDiagrame}).
+    \begin{figure}[h!]
+      \center
+      \includegraphics[width=0.75\textwidth]{images/chapter2/cancerDiagrame.PNG}
+      \caption{Cancer data warehouse use case diagram .}
+      \label{fig:cancerDiagrame}
+    \end{figure}
+    \newpage
+    \item \textit{Architecture Design:} Data is imported from several sources and transformed within a staging area before it is integrated and stored in the production data warehouse for further analysis (Figure\ref{fig:cancersystem}).
+     \begin{figure}[h!]
+      \center
+      \includegraphics[width=0.75\textwidth]{images/chapter2/cancersystem.PNG}
+      \caption{Cancer data warehouse Architecture Taken from the source.}
+      \label{fig:cancersystem}
+    \end{figure}
+    \end{enumerate}
+    
+    \item \textbf{\textit{Data Warehouse Framework in Pharmaceutical Sector:}} In this paper\cite{abd2019proposed} authors proposed a data warehouse framework to enhance decisions of distribution systems in pharmaceutical companies to decrease the medicine industry cost and increase productivity. The framework can be described in four phases shown in (Figure \ref{fig:pharmacysystem}). Phase one consists of a data preparation phase which has four steps (data collection, building DBs, DWH and data cleaning). Phase two consists of training phase which is applying time series to three types of Neural Networks techniques (levenberg marquardt, Bayesian regularized, and Scaled conjugate gradient).Phase three is testing the performance based on mean square error (MSE). Phase four consists of evaluating the performance of the best prediction model.
+    \begin{figure}[h!]
+      \center
+      \includegraphics[width=0.75\textwidth]{images/chapter2/pharmacysystem.PNG}
+      \caption{The Proposed Framework of Sales Prediction.}
+      \label{fig:pharmacysystem}
+    \end{figure}
+    \newpage
+    \item \textbf{\textit{Big Bata Warehouse Based On Hadoop Architecture:}} In this paper\cite{sebaa2018medical} entitled “Medical Big Data Warehouse: Architecture and System Design, a Case Study: Improving Healthcare Resources Distribution” authors proposed a system architecture and a conceptual data model for a MBDW (Medical Big Data Warehouse), and then offer a solution to overcome both the growing of fact table size and the lack of primary and foreign keys in the framework Apache Hive required in the conceptual data model. This solution is based on nested partitioning according to the dimension tables keys, then  applying their solution to implement a MBDW to improve medical resources distribution for the health sector in the Bejaia region (in Algeria). 
+    
+    The overall architecture is depicted in (Figure \ref{fig:bigdatarelated}). It is a scalable, reliable, and distributed architecture to extract, store, analyze, and visualize healthcare data extracted from various resources HIS (Hospitals Information systems).
+    \begin{figure}[h!]
+      \center
+      \includegraphics[width=0.75\textwidth]{images/chapter2/relatedworkHadoop.PNG}
+      \caption{Hadoop-based system
+      architecture of medical big data warehousing.}
+      \label{fig:bigdatarelated}
+    \end{figure}
+\end{itemize}
 
-\chapter{Implementation}
-\section{Tools}
-\section{Result}
 
-\chapter{Conclusion and prespectives}
+
+
