--- a/biblo.bib
+++ b/biblo.bib
@@ -471,3 +471,42 @@ url="https://doi.org/10.1007/978-3-319-21569-3_9"
   year={2018},
   publisher={Springer}
 }
+
+@article{wahDevelopmentDataWarehouse2009,
+  title = {Development of a Data Warehouse for {{Lymphoma}} Cancer Diagnosis and Treatment Decision Support},
+  author = {Wah, Teh and Sim, Ong},
+  year = {2009},
+  month = mar,
+  volume = {6},
+  abstract = {Data warehousing is becoming an indispensable component in data mining process and business intelligence. Data warehouses often act as a data collector, data integrator and data provider in the data mining process. This paper reviews the development and use of a clinical data warehouse specific to the Lymphoma or Lymph Node cancer, which could be used by doctors, physicians and other health professionals, in conjunction with a Clinical Decision Support System (DSS), to support the clinical process as well as to formulate the appropriate model to improve the quality of diagnosis and treatment recommendation decision making. This paper proposes a 5-stage sequential methodology for the clinical data warehouse development. Research on the evaluation of the developed data warehouse and how it would support the data mining process will be discussed in a separate paper.},
+  file = {C\:\\Users\\lenovo\\Zotero\\storage\\A8WDART5\\Wah et Sim - 2009 - Development of a data warehouse for Lymphoma cance.pdf}
+}
+
+@book{inmonBuildingDataWarehouse2005,
+  title = {Building the Data Warehouse},
+  author = {Inmon, William H.},
+  year = {2005},
+  edition = {4th ed},
+  publisher = {{Wiley}},
+  address = {{Indianapolis, Ind}},
+  isbn = {978-0-7645-9944-6},
+  langid = {english},
+  lccn = {QA76.9.D3 I5372 2005},
+  keywords = {Data warehousing,Database management},
+  file = {C\:\\Users\\lenovo\\Zotero\\storage\\VLFQTM62\\Inmon - 2005 - Building the data warehouse.pdf}
+}
+
+
+@book{kimballDataWarehouseETLToolkit2011,
+  title = {The {{Data WarehouseETL Toolkit}}: {{Practical Techniques}} for {{Extracting}}, {{Cleaning}}, {{Conforming}}, and {{Delivering Data}}.},
+  shorttitle = {The {{Data WarehouseETL Toolkit}}},
+  author = {Kimball, Ralph and Caserta, Joe},
+  year = {2011},
+  publisher = {{John Wiley \& Sons, Inc.}},
+  address = {{Hoboken}},
+  abstract = {Cowritten by Ralph Kimball, the world's leading data warehousing authority, whose previous books have sold more than 150,000 copiesDelivers real-world solutions for the most time- and labor-intensive portion of data warehousing-data staging, or the extract, transform, load (ETL) processDelineates best practices for extracting data from scattered sources, removing redundant and inaccurate data, transforming the remaining data into correctly formatted data structures, and then loading the end product into the data warehouseOffers proven time-saving ETL techniques, comprehensive guidance on build.},
+  isbn = {978-0-7645-7923-3},
+  langid = {english},
+  annotation = {OCLC: 780986568},
+  file = {C\:\\Users\\lenovo\\Zotero\\storage\\DLDK2KHZ\\Kimball et Caserta - 2011 - The Data WarehouseETL Toolkit Practical Technique.pdf}
+}
