--- a/parts/health_and_data.tex
+++ b/parts/health_and_data.tex
@@ -56,7 +56,7 @@ Schematically, several health-related activities can be distinguished\cite{marti
 \end{itemize}
 
 For each activity, different types of data are generated. In France and most developed countries, the following data is collected and digitally available (in chronological order)\cite{ATIHAgenceTechnique,boracle2009detection}:
-
+\label{chap:healthData}
 \begin{enumerate}
   \item \textbf{Administrative data} related to patient movements (identity, dates, places, etc.), demographic (age, sex, place of residence, etc.) and insurance (health coverage, etc.).
   \item \textbf{Results of biological analyses}, generally taken by nurses and analyzed by professionals or by robots.
