--- a/main.tex
+++ b/main.tex
@@ -28,7 +28,8 @@
 \input{parts/introduction.tex}
 \input{parts/health_and_data.tex}
 \input{parts/dataVis.tex}
-\input{parts/tocheck.tex}
+\input{parts/Implementation.tex}
+%\input{parts/tocheck.tex}
 \bibliographystyle{plain}
 \bibliography{biblo.bib}
 \end{document}
