--- a/parts/health_and_data.tex
+++ b/parts/health_and_data.tex
@@ -113,7 +113,7 @@ The information in an EHR is keyed in by healthcare providers and is only access
 \begin{figure}[h!]
   \center
   \includegraphics[width=0.75\textwidth]{images/chapter1/phr_ehr.PNG}
-  \caption{Difference between an EHR and ePHR (Token from \cite{alsahafiOverviewElectronicPersonal2018}).}
+  \caption{Difference between an EHR and ePHR (Taken from \cite{alsahafiOverviewElectronicPersonal2018}).}
   \label{fig:ehrvsphr}
 \end{figure}
 
