--- a/biblo.bib
+++ b/biblo.bib
@@ -510,3 +510,11 @@ url="https://doi.org/10.1007/978-3-319-21569-3_9"
   annotation = {OCLC: 780986568},
   file = {C\:\\Users\\lenovo\\Zotero\\storage\\DLDK2KHZ\\Kimball et Caserta - 2011 - The Data WarehouseETL Toolkit Practical Technique.pdf}
 }
+
+@article{naitEntropot,
+  title={Les entrepôts de données pour le décisionnel: Concepts et notions de base},
+  author={Sarah NAIT BAHLOUL},
+  pages={1--73},
+  year={2019},
+  publisher={USTO University}
+}
