--- a/main.tex
+++ b/main.tex
@@ -28,6 +28,7 @@
 \input{parts/introduction.tex}
 \input{parts/health_and_data.tex}
 \input{parts/dataVis.tex}
+\input{parts/contribution.tex}
 \input{parts/Implementation.tex}
 %\input{parts/tocheck.tex}
 \bibliographystyle{plain}
